Also add support for various css pre-processors:
.sass
.scss
.stylus
.less

--- a/index.html
+++ b/index.html
@@ -235,6 +235,10 @@
       // Files we want to consider code but that
       // are unrecognized by file_type
       var codeFileExtensions = [
+        /.sass$/,
+        /.scss$/,
+        /.stylus$/,
+        /.less$/,
         /.elm$/,
         /.vue$/,
         /.jsx$/
